@@ -23,7 +23,6 @@ import org.apache.velocity.Template;
 import org.apache.velocity.app.VelocityEngine;
 import org.apache.velocity.context.Context;
 import org.apache.velocity.runtime.RuntimeConstants;
-import org.apache.velocity.runtime.log.NullLogChute;
 import org.junit.Before;
 
 import java.io.StringWriter;
@@ -37,8 +36,6 @@ public class ClassGenerationCase {
     public void setUp() throws Exception {
         Properties props = new Properties();
 
-        // null logger that will prevent velocity.log from being generated
-        props.put(RuntimeConstants.RUNTIME_LOG_LOGSYSTEM_CLASS, NullLogChute.class.getName());
         props.put("resource.loader", "cayenne");
         props.put("cayenne.resource.loader.class", ClassGeneratorResourceLoader.class.getName());
         props.put("cayenne.resource.loader.cache", "false");
