@@ -407,8 +407,8 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.velocity</groupId>
-				<artifactId>velocity</artifactId>
-				<version>1.7</version>
+				<artifactId>velocity-engine-core</artifactId>
+				<version>2.0</version>
 			</dependency>
 			<dependency>
 				<groupId>foundrylogic.vpp</groupId>
